message_feed: Fix /me message alignment of message actions.
These were apparently no longer aligned with the timestamp.

Fixes #23101.

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -1078,7 +1078,7 @@ td.pointer {
     }
 
     &.sender-status-controls {
-        top: 10px;
+        top: 8px;
     }
 
     .message_failed {
